# combo

./: .gitignore  Cargo.toml  README.md
configs/helldivers/: incendiary-thunderer.json  incendiary.json  missile.json  railcannon.json  resupply.json  shredder.json  static-airstrike.json  static-missile.json  static-thunderer.json  static.json  thunderer.json
src/: args.rs  config.rs  main.rs
